# yandex-courcera

./: .gitignore  README.md
1-white-belt/week-1/: 0_План специализации.docx  passed-tasks.xlsx
1-white-belt/week-1/1-Обзор возможностей C++/tests/: 3-знакомство с C++.docx  8-языковые конструкции.docx
1-white-belt/week-1/1-Обзор возможностей C++/text-materials/: 7-использование точки с запятой в C++.docx
1-white-belt/week-1/2-Работа со средой Eclipse - установка, создание проекта, компиляция, запуск, отладка/text-materials/: 1-NEW_Установка компилятора на Windows.docx  3-Установка Eclipse на Linux.docx  (+5 more)
1-white-belt/week-2/: passed-tasks.xlsx
1-white-belt/week-2/2-vector/: abstract.txt
1-white-belt/week-2/3-map/: abstract_1.txt  abstract_2.txt
1-white-belt/week-3/: passed-tasks.xlsx
1-white-belt/week-4/: passed-tasks.xlsx
2-yellow-belt/week-1/: passed-tasks.xlsx
2-yellow-belt/week-1/1-organizational_issues/: 2-Как всё устроено и зачем.docx  3-План специализации Искусство разработки на современном C++.docx  4-Где задать вопрос telegram, forum.docx
2-yellow-belt/week-2/: passed-tasks.xlsx
2-yellow-belt/week-2/3-Разработка фреймворков и юнит-тестов. Окончание. Итоги/tasks/14-tests_for_IsPalindrom/solution/: .project  CMakeLists.txt
2-yellow-belt/week-2/3-Разработка фреймворков и юнит-тестов. Окончание. Итоги/tasks/14-tests_for_IsPalindrom/solution/src/: main.cpp
2-yellow-belt/week-3/: passed-tasks.xlsx
2-yellow-belt/week-4/: passed-tasks.xlsx
2-yellow-belt/week-5/: passed-tasks.xlsx
2-yellow-belt/week-6/2-final-titles/: 2-продолжение курса.docx
(+316 files in other folders)
